--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -13,8 +13,10 @@
     "@react-oauth/google": "^0.12.2",
     "axios": "^1.13.1",
     "jwt-decode": "^4.0.0",
+    "lucide-react": "^0.553.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.5"
   },
   "devDependencies": {
