--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@jitsi/react-sdk": "^1.4.4",
     "@react-oauth/google": "^0.12.2",
     "axios": "^1.13.1",
     "jwt-decode": "^4.0.0",
