--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-oauth/google": "^0.12.2",
+    "@supabase/supabase-js": "^2.90.1",
     "axios": "^1.13.1",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.553.0",
