--- a/src/frontend/vercel.json
+++ b/src/frontend/vercel.json
@@ -1,5 +1,15 @@
 {
+  "crons": [
+    {
+      "path": "/api/cron/reminders/",
+      "schedule": "*/5 * * * *"
+    }
+  ],
   "rewrites": [
+    {
+      "source": "/api/(.*)",
+      "destination": "https://TVOJ_BACKEND_URL/api/$1"
+    },
     {
       "source": "/(.*)",
       "destination": "/index.html"
