--- a/src/frontend/vercel.json
+++ b/src/frontend/vercel.json
@@ -2,17 +2,10 @@
   "crons": [
     {
       "path": "/api/cron/reminders/",
-      "schedule": "*/5 * * * *"
-    }
-  ],
-  "rewrites": [
-    {
-      "source": "/api/(.*)",
-      "destination": "https://TVOJ_BACKEND_URL/api/$1"
-    },
-    {
-      "source": "/(.*)",
-      "destination": "/index.html"
+      "schedule": "*/5 * * * *",
+      "headers": {
+        "X-CRON-TOKEN": "neki-random-string"
+      }
     }
   ]
 }
